k8/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations: {}
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: productservice
                port:
                  number: 8082
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: inventoryservice
                port:
                  number: 8083
